# legal-mate-ai

./: LICENSE  README.md  crews  pyproject.toml  requirements.txt
src/legal_mate_ai/: crew.py  main.py  run_crew.py  run_flow.py
src/legal_mate_ai/config/: agents.yaml  tasks.yaml
src/legal_mate_ai/crews/legal_summarizer/: legal_summarizer_crew.py
src/legal_mate_ai/crews/legal_summarizer/config/: agents.yaml  tasks.yaml
src/legal_mate_ai/crews/text_validator/: text_validator_crew.py
src/legal_mate_ai/crews/text_validator/config/: agents.yaml  tasks.yaml
