[project]
name = "legal_mate_ai"
version = "0.1.0"
description = "legal-mate-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
legal_mate_ai = "legal_mate_ai.main:run"
run_crew = "legal_mate_ai.main:run"
train = "legal_mate_ai.main:train"
replay = "legal_mate_ai.main:replay"
test = "legal_mate_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
