[project]
name = "legal_mate_ai"
version = "0.1.0"
description = "legal-mate-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
]

[project.scripts]
kickoff = "legal_mate_ai.main:kickoff"
run_crew = "legal_mate_ai.main:kickoff"
plot = "legal_mate_ai.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
